Fixed figure references and updated wt outline

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -814,6 +814,43 @@
   doi      = "10.1038/s41592-018-0216-7"
 }
 
+@ARTICLE{Collinet2015-af,
+  title    = "Local and tissue-scale forces drive oriented junction growth
+              during tissue extension",
+  author   = "Collinet, Claudio and Rauzi, Matteo and Lenne, Pierre-François
+              and Lecuit, Thomas",
+  abstract = "Convergence-extension is a widespread morphogenetic process
+              driven by polarized cell intercalation. In the Drosophila germ
+              band, epithelial intercalation comprises loss of junctions
+              between anterior-posterior neighbours followed by growth of new
+              junctions between dorsal-ventral neighbours. Much is known about
+              how active stresses drive polarized junction shrinkage. However,
+              it is unclear how tissue convergence-extension emerges from local
+              junction remodelling and what the specific role, if any, of
+              junction growth is. Here we report that tissue convergence and
+              extension correlate mostly with new junction growth. Simulations
+              and in vivo mechanical perturbations reveal that junction growth
+              is due to local polarized stresses driven by medial actomyosin
+              contractions. Moreover, we find that tissue-scale pulling forces
+              at the boundary with the invaginating posterior midgut actively
+              participate in tissue extension by orienting junction growth.
+              Thus, tissue extension is akin to a polarized fluid flow that
+              requires parallel and concerted local and tissue-scale forces to
+              drive junction growth and cell-cell displacement.",
+  journal  = "Nat. Cell Biol.",
+  volume   =  17,
+  number   =  10,
+  pages    = "1247--1258",
+  month    =  oct,
+  year     =  2015,
+  url      = "http://dx.doi.org/10.1038/ncb3226",
+  keywords = "Cephalic furrow;Furrow mechanics",
+  language = "en",
+  issn     = "1465-7392, 1476-4679",
+  pmid     = "26389664",
+  doi      = "10.1038/ncb3226"
+}
+
 @ARTICLE{Berg2019-ab,
   title    = "ilastik: interactive machine learning for (bio)image analysis",
   author   = "Berg, Stuart and Kutra, Dominik and Kroeger, Thorben and
@@ -1002,6 +1039,44 @@
   issn     = "1534-5807, 1878-1551",
   pmid     = "32169160",
   doi      = "10.1016/j.devcel.2020.02.012"
+}
+
+@ARTICLE{Blanchard2009-ns,
+  title    = "Tissue tectonics: morphogenetic strain rates, cell shape change
+              and intercalation",
+  author   = "Blanchard, Guy B and Kabla, Alexandre J and Schultz, Nora L and
+              Butler, Lucy C and Sanson, Benedicte and Gorfinkiel, Nicole and
+              Mahadevan, L and Adams, Richard J",
+  abstract = "The dynamic reshaping of tissues during morphogenesis results
+              from a combination of individual cell behaviors and collective
+              cell rearrangements. However, a comprehensive framework to
+              unambiguously measure and link cell behavior to tissue
+              morphogenesis is lacking. Here we introduce such a kinematic
+              framework, bridging cell and tissue behaviors at an intermediate,
+              mesoscopic, level of cell clusters or domains. By measuring
+              domain deformation in terms of the relative motion of cell
+              positions and the evolution of their shapes, we characterized the
+              basic invariant quantities that measure fundamental classes of
+              cell behavior, namely tensorial rates of cell shape change and
+              cell intercalation. In doing so we introduce an explicit
+              definition of cell intercalation as a continuous process. We
+              mapped strain rates spatiotemporally in three models of tissue
+              morphogenesis, gaining insight into morphogenetic mechanisms. Our
+              quantitative approach has broad relevance for the precise
+              characterization and comparison of morphogenetic phenotypes.",
+  journal  = "Nat. Methods",
+  volume   =  6,
+  number   =  6,
+  pages    = "458--464",
+  month    =  jun,
+  year     =  2009,
+  url      = "http://dx.doi.org/10.1038/nmeth.1327",
+  keywords = "Mechano-development;Furrow mechanics",
+  language = "en",
+  issn     = "1548-7091, 1548-7105",
+  pmid     = "19412170",
+  doi      = "10.1038/nmeth.1327",
+  pmc      = "PMC4894466"
 }
 
 @INCOLLECTION{Campos-Ortega1997-rd,
